clj/panama: AOT compile benchmark