@@ -9,6 +9,11 @@ export DART_INCLUDE="$(dirname $(which dart))/../include"
 export NODE_INCLUDE="$(dirname $(which node))/../include/node"
 
 tup upd && \
+    rm -rf clojure_panama/classes && \
+    mkdir -p clojure_panama/classes && \
+    clojure -J--enable-native-access=ALL-UNNAMED \
+        -Sdeps '{:paths ["." "clojure_panama/classes"]}' \
+        -M -e '(binding [*compile-path* "clojure_panama/classes"] (compile (quote clojure-panama.hello)))' && \
     nim c -d:release --parallelBuild:1 --nimcache:nimcache -o:nim_hello --passL:"-Lnewplus -lnewplus -Wl,-rpath,$$ORIGIN/newplus" hello.nim && \
     zig build -Doptimize=ReleaseFast && \
     tup upd && \
